--- a/cp.htm
+++ b/cp.htm
@@ -247,9 +247,9 @@
               <ul class="publish_info">
                 <li>發文/公佈日期：2023-11-13</li>
                 <li>發文文號：衛授食字第1121411949號</li>
-                <li>點閱次數：999</li>
                 <li>分類：藥政管理</li>
                 <li>文件類別：函</li>
+                <li>點閱次數：999</li>
               </ul>
               <figure class="pic float_left">
                 <!-- 此範例為4:3比例 -->
@@ -517,6 +517,7 @@
                 地址：台北市南港區11557忠孝東路六段465號3樓<br />
                 本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上<br />
                 <span class="update">更新日期:<em>112-10-30</em></span>
+                <span class="counter">累計瀏覽人次:<em>1234567890</em></span>
               </p>
             </div>
           </div>
