--- a/lp.htm
+++ b/lp.htm
@@ -243,86 +243,7 @@
                 </ul>
               </div>
               <!-- category end-->
-            <!-- 圖文列表 start -->
-            <div class="pictext_list_block">
-              <!-- 1 -->
-              <div class="pictext_list">
-                <div class="content">
-                  <!-- doc_release star-->
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                   <!-- doc_release end-->
-                </div>
-              </div>
-              <!-- 2 -->
-              <div class="pictext_list">
-                <div class="content">
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <!-- 3 -->
-              <div class="pictext_list">
-                <div class="content">
-                  <!-- doc_release star-->
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                   <!-- doc_release end-->
-                </div>
-              </div>
-              <!-- 4 -->
-              <div class="pictext_list">
-                <div class="content">
-                  <!-- doc_release star-->
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                   <!-- doc_release end-->
-                </div>
-              </div>
-              <!-- 5 -->
-              <div class="pictext_list">
-                <div class="content">
-                  <!-- doc_release star-->
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                   <!-- doc_release end-->
-                </div>
-              </div>
-            </div>
-            <!-- 圖文列表 end -->
-            </section>
-            <!-- LP End -->
-            <!-- Pagination -->
+              <!-- Pagination -->
             <div class="pagination">
               <form action="">
                 <div class="form_inline">
@@ -352,9 +273,134 @@
                 <li><a href="#">9</a></li>
                 <li><a href="#">10</a></li>
                 <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
               </ul>
             </div>
             <!-- Pagination end-->
+            <!-- 圖文列表 start -->
+            <div class="pictext_list_block">
+              <!-- 1 -->
+              <div class="pictext_list">
+                <a href="#">
+                <div class="content">
+                  <!-- doc_release star-->
+                  <div class="doc_release">
+                    <ul>
+                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
+                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
+                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
+                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
+                    </ul>
+                  </div>
+                   <!-- doc_release end-->
+                </div>
+                </a>
+              </div>
+              <!-- 2 -->
+              <div class="pictext_list">
+                <a href="#">
+                <div class="content">
+                  <div class="doc_release">
+                    <ul>
+                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
+                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
+                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
+                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
+                    </ul>
+                  </div>
+                </div>
+                </a>
+              </div>
+              <!-- 3 -->
+              <div class="pictext_list">
+                <a href="#">
+                <div class="content">
+                  <!-- doc_release star-->
+                  <div class="doc_release">
+                    <ul>
+                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
+                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
+                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
+                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
+                    </ul>
+                  </div>
+                   <!-- doc_release end-->
+                </div>
+                </a>
+              </div>
+              <!-- 4 -->
+              <div class="pictext_list">
+                <a href="#">
+                <div class="content">
+                  <!-- doc_release star-->
+                  <div class="doc_release">
+                    <ul>
+                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
+                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
+                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
+                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
+                    </ul>
+                  </div>
+                   <!-- doc_release end-->
+                </div>
+                </a>
+              </div>
+              <!-- 5 -->
+              <div class="pictext_list">
+                <a href="#">
+                <div class="content">
+                  <!-- doc_release star-->
+                  <div class="doc_release">
+                    <ul>
+                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
+                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
+                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
+                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
+                    </ul>
+                  </div>
+                   <!-- doc_release end-->
+                </div>
+              </div>
+              </a>
+            </div>
+            <!-- 圖文列表 end -->
+                        <!-- Pagination -->
+            <div class="pagination">
+              <form action="">
+                <div class="form_inline">
+                  <div class="total">
+                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                    <select name="" id="" aria-label="每頁顯示">
+                      <option value="">10</option>
+                      <option value="">20</option>
+                      <option value="">30</option>
+                      <option value="">40</option>
+                    </select>
+                    筆， <input type="button" value="確定" class="btn btn-submit" />
+                  </div>
+                </div>
+              </form>
+              <ul class="page">
+                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                <li class="active"><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#">6</a></li>
+                <li><a href="#">7</a></li>
+                <li><a href="#">8</a></li>
+                <li><a href="#">9</a></li>
+                <li><a href="#">10</a></li>
+                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+              </ul>
+            </div>
+            <!-- Pagination end-->
+            </section>
+            <!-- LP End -->
+
           </div>
         </div>
       </div>
@@ -373,6 +419,7 @@
                 地址：台北市南港區11557忠孝東路六段465號3樓<br />
                 本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上<br />
                 <span class="update">更新日期:<em>112-10-30</em></span>
+                <span class="counter">累計瀏覽人次:<em>1234567890</em></span>
               </p>
             </div>
           </div>
