--- a/lp_list.htm
+++ b/lp_list.htm
@@ -130,31 +130,63 @@
           <!-- 左側 -->
           <div class="left_block hidden">
             <div class="leftblock_nodemenu">
-              <div class="title">標題文字</div>
+              <div class="title">藥品</div>
               <ul>
                 <li>
-                  <a href="#">第一層選單</a>
+                  <a href="#">藥品臨床試驗</a>
                 </li>
                 <li>
-                  <a href="#">第一層選單</a>
-                  <ul>
+                  <a href="#">藥品查驗登記</a>
+                  <!-- <ul>
                     <li><a href="#">第二層選單</a></li>
                     <li><a href="#">第二層選單</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li>
-                  <a href="#">第一層選單</a>
+                  <a href="#">上市後管理</a>
                 </li>
                 <li>
-                  <a href="#">第一層選單</a>
+                  <a href="#">再生醫療</a>
+                </li>
+                <li>
+                  <a href="#">藥政管理</a>
+                </li>
+                <li>
+                  <a href="#">術接性試驗</a>
+                </li>
+                <li>
+                  <a href="#">BA/BE試驗</a>
+                </li>
+                <li>
+                  <a href="#">依公告仿單變更</a>
+                </li>
+                <li>
+                  <a href="#">安全資訊風險溝通表</a>
+                </li>
+                <li>
+                  <a href="#">學名藥</a>
+                </li>
+                <li>
+                  <a href="#">指示藥品</a>
+                </li>
+                <li>
+                  <a href="#">中草藥</a>
+                </li>
+                <li>
+                  <a href="#">罕見疾病藥品</a>
+                </li>
+                <li>
+                  <a href="#">生物相似性藥品</a>
+                </li>
+                <li>
+                  <a href="#">其他</a>
                 </li>
               </ul>
             </div>
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <!-- h2節點 -->
-            <h2 class="title">NP標題</h2>
+            <h2 class="title">最新法規資訊</h2>
             <!-- function_panel -->
             <div class="function_panel">
               <!-- function功能區塊 start-->
@@ -201,55 +233,126 @@
             </div>
             <!-- function_panel -->
 
-            <!-- NP Start -->
-            <!-- 說明區塊 start -->
-            <div class="explain_block">
-              <p>
-                查驗中心於 2006 年成立醫療器材組，主要的業務範圍包括醫療器材相關之技術性資料評估及法規諮詢輔導。而協助食品藥物管理署執行之醫療器材技術性資料評估，包含醫療器材臨床試驗計畫書、臨床試驗報告、查驗登記及相關展延變更，以確保我國民眾使用安全性。
-                此外，針對重要國家型生技計畫，及生技醫藥學研產業之政府補助計畫申請案，進行醫療器材案件有關法規面的評析工作，提供相關部會與申請單位有關醫療器材計畫的法規途徑規劃建議，俾促進國內醫療器材產業發展。
-              </p>
-              <p>
-                <img src="images/pic05.jpg" alt="圖片說明" />
-                查驗中心於 2006 年成立醫療器材組，主要的業務範圍包括醫療器材相關之技術性資料評估及法規諮詢輔導。而協助食品藥物管理署執行之醫療器材技術性資料評估，包含醫療器材臨床試驗計畫書、臨床試驗報告、查驗登記及相關展延變更，以確保我國民眾使用安全性。
-                此外，針對重要國家型生技計畫，及生技醫藥學研產業之政府補助計畫申請案，進行醫療器材案件有關法規面的評析工作，提供相關部會與申請單位有關醫療器材計畫的法規途徑規劃建議，俾促進國內醫療器材產業發展。
-              </p>
-              <img src="images/pic01.jpg" alt="" />
-            </div>
-            <!-- 說明區塊 end -->
-            <!-- 圖片 start -->
-            <div class="npimage">
-              <img src="images/pic01.jpg" alt="" />
-            </div>
-            <!-- 圖片 end -->
-            <section class="sub_menu">
-              <ul>
-                <li>
-                  <a href="#"><span class="num">1</span>藥品審查</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">2</span>細胞治療技術</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">3</span>醫療器材</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">4</span>健康食品及特殊營養食品</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">5</span>醫療科技評估</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">6</span>諮詢輔導</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">7</span>國際合作</a>
-                </li>
-                <li>
-                  <a href="#"><span class="num">8</span>中心簡介</a>
-                </li>
-              </ul>
+            <!-- LP Start -->
+            <section class="lp">
+              <!-- category -->
+              <div class="category">
+                <ul>
+                  <li><a href="#" class="active">全部</a></li>
+                  <li><a href="#">藥品</a></li>
+                  <li><a href="#">醫療器材</a></li>
+                </ul>
+              </div>
+              <!-- category end-->
+              <!-- Pagination -->
+              <div class="pagination">
+                <form action="">
+                  <div class="form_inline">
+                    <div class="total">
+                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                      <select name="" id="" aria-label="每頁顯示">
+                        <option value="">10</option>
+                        <option value="">20</option>
+                        <option value="">30</option>
+                        <option value="">40</option>
+                      </select>
+                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                    </div>
+                  </div>
+                </form>
+                <ul class="page">
+                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li><a href="#">7</a></li>
+                  <li><a href="#">8</a></li>
+                  <li><a href="#">9</a></li>
+                  <li><a href="#">10</a></li>
+                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                </ul>
+              </div>
+              <!-- Pagination end-->
+              <!-- 文字列表 -->
+              <div class="list">
+                <ul>
+                  <li>
+                    <a href="#">
+                      <span class="num">1</span><span class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起施行，請查照並轉知所屬會員。<em class="new">最新</em></span
+                      ><time>113-01-17</time>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">2</span><span class="title">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">3</span><span class="title">有關公告修訂「生體相等性試驗之受託研究機構管理規範」一案，請至本署網站之「公告資訊」下載，請查照並轉知所屬會員及相關單位。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">4</span><span class="title">針對長期專案進口或供應不穩之藥品，為鼓勵業者申請藥品許可證，請轉知所屬會員，詳如說明段，請查照。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">5</span><span class="title">關於「人工智慧/機器學習技術之電腦輔助偵測及電腦輔助診斷(CADx)醫療器材查驗登記技術指引」業經食藥署於112年9月14日FDA器字第1121607549號公告修正。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">6</span><span class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起施行，請查照並轉知所屬會員。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">7</span><span class="title">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">8</span><span class="title">有關公告修訂「生體相等性試驗之受託研究機構管理規範」一案，請至本署網站之「公告資訊」下載，請查照並轉知所屬會員及相關單位。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">9</span><span class="title">針對長期專案進口或供應不穩之藥品，為鼓勵業者申請藥品許可證，請轉知所屬會員，詳如說明段，請查照。</span><time>113-01-17</time> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span class="num">10</span><span class="title">關於「人工智慧/機器學習技術之電腦輔助偵測及電腦輔助診斷(CADx)醫療器材查驗登記技術指引」業經食藥署於112年9月14日FDA器字第1121607549號公告修正。</span><time>113-01-17</time> </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- 文字列表 end -->
+              <!-- Pagination -->
+              <div class="pagination">
+                <form action="">
+                  <div class="form_inline">
+                    <div class="total">
+                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                      <select name="" id="" aria-label="每頁顯示">
+                        <option value="">10</option>
+                        <option value="">20</option>
+                        <option value="">30</option>
+                        <option value="">40</option>
+                      </select>
+                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                    </div>
+                  </div>
+                </form>
+                <ul class="page">
+                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li><a href="#">7</a></li>
+                  <li><a href="#">8</a></li>
+                  <li><a href="#">9</a></li>
+                  <li><a href="#">10</a></li>
+                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                </ul>
+              </div>
+              <!-- Pagination end-->
             </section>
-            <!-- NP End -->
+            <!-- LP End -->
           </div>
         </div>
       </div>
