--- a/search.htm
+++ b/search.htm
@@ -289,6 +289,7 @@
                 地址：台北市南港區11557忠孝東路六段465號3樓<br />
                 本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上<br />
                 <span class="update">更新日期:<em>112-10-30</em></span>
+                <span class="counter">累計瀏覽人次:<em>1234567890</em></span>
               </p>
             </div>
           </div>
