--- a/search_detail2.htm
+++ b/search_detail2.htm
@@ -166,41 +166,42 @@
               <!-- function功能區塊 end-->
             </div>
             <!-- function_panel -->
-            <!-- Pagination -->
-            <div class="pagination">
-              <form action="">
-                <div class="form_inline">
-                  <div class="total">
-                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                    <select name="" id="" aria-label="每頁顯示">
-                      <option value="">10</option>
-                      <option value="">20</option>
-                      <option value="">30</option>
-                      <option value="">40</option>
-                    </select>
-                    筆， <input type="button" value="確定" class="btn btn-submit" />
-                  </div>
-                </div>
-              </form>
-              <ul class="page">
-                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-              </ul>
-            </div>
-            <!-- Pagination end-->
             <!-- LP Start -->
             <section class="lp">
+              <!-- Pagination -->
+              <div class="pagination">
+                <form action="">
+                  <div class="form_inline">
+                    <div class="total">
+                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                      <select name="" id="" aria-label="每頁顯示">
+                        <option value="">10</option>
+                        <option value="">20</option>
+                        <option value="">30</option>
+                        <option value="">40</option>
+                      </select>
+                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                    </div>
+                  </div>
+                </form>
+                <ul class="page">
+                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li><a href="#">7</a></li>
+                  <li><a href="#">8</a></li>
+                  <li><a href="#">9</a></li>
+                  <li><a href="#">10</a></li>
+                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                </ul>
+              </div>
+              <!-- Pagination end-->
               <!-- 查詢結果 -->
               <div class="table_list">
                 <table class="table_sprite">
@@ -232,8 +233,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">&nbsp;</td>
                       <td>
-                        72.11.17衛署藥字第451401號<br />
-                        公告心臟血管藥品評估通過72.11.17第451401號
+                        <ul>
+                          <li><a href="#">72.11.17衛署藥字第451401號</a></li>
+                          <li><a href="#">公告心臟血管藥品評估通過72.11.17第451401號</a></li>
+                        </ul>
                       </td>
                       <td>利尿﹑腦水腫﹑降顱內壓﹑降眼壓。</td>
                     </tr>
@@ -247,8 +250,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">-</td>
                       <td>
-                        63.06.15衛署藥字第43869號<br />
-                        63.06.15第43869號<br />
+                        <ul>
+                          <li><a href="#">63.06.15衛署藥字第43869號</a></li>
+                          <li><a href="#">63.06.15第43869號</a></li>
+                        </ul>
                       </td>
                       <td>&nbsp;</td>
                     </tr>
@@ -276,8 +281,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">&nbsp;</td>
                       <td>
-                        院臺衛字第1080038834號<br />
-                        108.12.05院臺衛字第1080038834號
+                        <ul>
+                          <li><a href="#">院臺衛字第1080038834號</a></li>
+                          <li><a href="#">108.12.05院臺衛字第1080038834號</a></li>
+                        </ul>
                       </td>
                       <td>中文仿單變更</td>
                     </tr>
@@ -291,8 +298,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">&nbsp;</td>
                       <td>
-                        72.11.17衛署藥字第451401號<br />
-                        公告心臟血管藥品評估通過72.11.17第451401號
+                        <ul>
+                          <li><a href="#">72.11.17衛署藥字第451401號</a></li>
+                          <li><a href="#">公告心臟血管藥品評估通過72.11.17第451401號</a></li>
+                        </ul>
                       </td>
                       <td>利尿﹑腦水腫﹑降顱內壓﹑降眼壓。</td>
                     </tr>
@@ -306,8 +315,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">-</td>
                       <td>
-                        63.06.15衛署藥字第43869號<br />
-                        63.06.15第43869號<br />
+                        <ul>
+                          <li><a href="#">63.06.15衛署藥字第43869號</a></li>
+                          <li><a href="#">63.06.15第43869號</a></li>
+                        </ul>
                       </td>
                       <td>&nbsp;</td>
                     </tr>
@@ -335,8 +346,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">&nbsp;</td>
                       <td>
-                        院臺衛字第1080038834號<br />
-                        108.12.05院臺衛字第1080038834號
+                        <ul>
+                          <li><a href="#">院臺衛字第1080038834號</a></li>
+                          <li><a href="#">108.12.05院臺衛字第1080038834號</a></li>
+                        </ul>
                       </td>
                       <td>中文仿單變更</td>
                     </tr>
@@ -364,8 +377,10 @@
                       <td>&nbsp;</td>
                       <td class="aCenter">&nbsp;</td>
                       <td>
-                        院臺衛字第1080038834號<br />
-                        108.12.05院臺衛字第1080038834號
+                        <ul>
+                          <li><a href="#">院臺衛字第1080038834號</a></li>
+                          <li><a href="#">108.12.05院臺衛字第1080038834號</a></li>
+                        </ul>
                       </td>
                       <td>中文仿單變更</td>
                     </tr>
@@ -373,41 +388,42 @@
                 </table>
               </div>
               <!-- 查詢結果 end-->
+              <!-- Pagination -->
+              <div class="pagination">
+                <form action="">
+                  <div class="form_inline">
+                    <div class="total">
+                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                      <select name="" id="" aria-label="每頁顯示">
+                        <option value="">10</option>
+                        <option value="">20</option>
+                        <option value="">30</option>
+                        <option value="">40</option>
+                      </select>
+                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                    </div>
+                  </div>
+                </form>
+                <ul class="page">
+                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li><a href="#">7</a></li>
+                  <li><a href="#">8</a></li>
+                  <li><a href="#">9</a></li>
+                  <li><a href="#">10</a></li>
+                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                </ul>
+              </div>
+              <!-- Pagination end-->
             </section>
             <!-- LP End -->
-            <!-- Pagination -->
-            <div class="pagination">
-              <form action="">
-                <div class="form_inline">
-                  <div class="total">
-                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                    <select name="" id="" aria-label="每頁顯示">
-                      <option value="">10</option>
-                      <option value="">20</option>
-                      <option value="">30</option>
-                      <option value="">40</option>
-                    </select>
-                    筆， <input type="button" value="確定" class="btn btn-submit" />
-                  </div>
-                </div>
-              </form>
-              <ul class="page">
-                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-              </ul>
-            </div>
-            <!-- Pagination end-->
           </div>
         </div>
       </div>
@@ -426,6 +442,7 @@
                 地址：台北市南港區11557忠孝東路六段465號3樓<br />
                 本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上<br />
                 <span class="update">更新日期:<em>112-10-30</em></span>
+                <span class="counter">累計瀏覽人次:<em>1234567890</em></span>
               </p>
             </div>
           </div>
