--- a/index.htm
+++ b/index.htm
@@ -108,6 +108,11 @@
           <tbody>
             <tr>
               <td></td>
+              <td>最新法規資訊</td>
+              <td><a href="lp_list.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>藥品類別-條列頁(清單式)</td>
               <td><a href="lp.htm"></a></td>
             </tr>
