--- a/search_detail.htm
+++ b/search_detail.htm
@@ -180,41 +180,42 @@
             </div>
             <!-- function_panel -->
 
-            <!-- Pagination -->
-            <div class="pagination">
-              <form action="">
-                <div class="form_inline">
-                  <div class="total">
-                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                    <select name="" id="" aria-label="每頁顯示">
-                      <option value="">10</option>
-                      <option value="">20</option>
-                      <option value="">30</option>
-                      <option value="">40</option>
-                    </select>
-                    筆， <input type="button" value="確定" class="btn btn-submit" />
-                  </div>
-                </div>
-              </form>
-              <ul class="page">
-                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-              </ul>
-            </div>
-            <!-- Pagination end-->
             <!-- LP Start -->
             <section class="lp">
+              <!-- Pagination -->
+              <div class="pagination">
+                <form action="">
+                  <div class="form_inline">
+                    <div class="total">
+                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                      <select name="" id="" aria-label="每頁顯示">
+                        <option value="">10</option>
+                        <option value="">20</option>
+                        <option value="">30</option>
+                        <option value="">40</option>
+                      </select>
+                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                    </div>
+                  </div>
+                </form>
+                <ul class="page">
+                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li><a href="#">7</a></li>
+                  <li><a href="#">8</a></li>
+                  <li><a href="#">9</a></li>
+                  <li><a href="#">10</a></li>
+                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                </ul>
+              </div>
+              <!-- Pagination end-->
               <!-- 查詢結果 -->
               <div class="table_list">
                 <table class="table_sprite">
@@ -314,41 +315,42 @@
                 </table>
               </div>
               <!-- 查詢結果 end-->
+              <!-- Pagination -->
+              <div class="pagination">
+                <form action="">
+                  <div class="form_inline">
+                    <div class="total">
+                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
+                      <select name="" id="" aria-label="每頁顯示">
+                        <option value="">10</option>
+                        <option value="">20</option>
+                        <option value="">30</option>
+                        <option value="">40</option>
+                      </select>
+                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                    </div>
+                  </div>
+                </form>
+                <ul class="page">
+                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
+                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li><a href="#">7</a></li>
+                  <li><a href="#">8</a></li>
+                  <li><a href="#">9</a></li>
+                  <li><a href="#">10</a></li>
+                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
+                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                </ul>
+              </div>
+              <!-- Pagination end-->
             </section>
             <!-- LP End -->
-            <!-- Pagination -->
-            <div class="pagination">
-              <form action="">
-                <div class="form_inline">
-                  <div class="total">
-                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                    <select name="" id="" aria-label="每頁顯示">
-                      <option value="">10</option>
-                      <option value="">20</option>
-                      <option value="">30</option>
-                      <option value="">40</option>
-                    </select>
-                    筆， <input type="button" value="確定" class="btn btn-submit" />
-                  </div>
-                </div>
-              </form>
-              <ul class="page">
-                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-              </ul>
-            </div>
-            <!-- Pagination end-->
           </div>
         </div>
       </div>
@@ -367,6 +369,7 @@
                 地址：台北市南港區11557忠孝東路六段465號3樓<br />
                 本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上<br />
                 <span class="update">更新日期:<em>112-10-30</em></span>
+                <span class="counter">累計瀏覽人次:<em>1234567890</em></span>
               </p>
             </div>
           </div>
